--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Lato:300,500,700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -20,8 +20,6 @@ h1 {
   position: relative;
 }
 
-/* BUTTONS */
-
 h1 button {
   position: absolute;
   right: 0;
@@ -30,10 +28,10 @@ h1 button {
 }
 
 .btn {
+  cursor: pointer;
   background-color: #fff;
   border: 1px solid #aaa;
   border-radius: 3px;
-  cursor: pointer;
   font-size: 14px;
   margin-top: 20px;
   padding: 10px 15px;
@@ -45,7 +43,7 @@ h1 button {
 }
 
 .btn-ghost {
-  border: none;
+  border: 0;
   background-color: transparent;
 }
 
@@ -55,40 +53,33 @@ h1 button {
   left: 30px;
 }
 
-/* CARDS */
 .cards {
   perspective: 1000px;
   position: relative;
+  height: 300px;
   width: 500px;
   max-width: 100%;
-  height: 300px;
 }
 
 .card {
   position: absolute;
+  opacity: 0;
+  font-size: 1.5em;
   top: 0;
   left: 0;
-  width: 100%;
   height: 100%;
-  font-size: 1.5rem;
-  transform: translateX(50%);
-
-  /* initial status / not visible */
-  opacity: 0;
+  width: 100%;
   transform: translateX(50%) rotateY(-10deg);
-  transition: all 0.4s ease;
+  transition: transform 0.4s ease, opacity 0.4s ease;
 }
 
-/* active status (visible) via JS */
 .card.active {
-  opacity: 1;
-  transform: translateX(0) rotateY(0deg);
-
   cursor: pointer;
+  opacity: 1;
   z-index: 10;
+  transform: translateX(0) rotateY(0deg);
 }
 
-/* left status via JS */
 .card.left {
   transform: translateX(-50%) rotateY(10deg);
 }
@@ -103,8 +94,13 @@ h1 button {
   transition: transform 0.4s ease;
 }
 
+.card.show-answer .inner-card {
+  transform: rotateX(180deg);
+}
+
 .inner-card-front,
 .inner-card-back {
+  backface-visibility: hidden;
   position: absolute;
   top: 0;
   left: 0;
@@ -113,37 +109,30 @@ h1 button {
   justify-content: center;
   height: 100%;
   width: 100%;
-  background-color: #fff;
-  backface-visibility: hidden;
+  background: #fff;
 }
 
-/* initial rotation status */
 .inner-card-front {
   transform: rotateX(0deg);
   z-index: 2;
 }
-.inner-card-back {
-  transform: rotatX(180deg);
-}
 
-/* rotate animation via JS */
-.card.show-answer .inner-card {
+.inner-card-back {
   transform: rotateX(180deg);
 }
 
-/* rotate button via CSS */
 .inner-card-front::after,
 .inner-card-back::after {
-  content: "🔃 Flip";
-
+  content: "\f021  Flip";
+  font-family: "Font Awesome 5 Free", Lato, sans-serif;
   position: absolute;
   top: 10px;
   right: 10px;
+  font-weight: bold;
   font-size: 16px;
   color: #ddd;
 }
 
-/* NAVIGATION */
 .navigation {
   display: flex;
   margin: 20px 0;
@@ -160,31 +149,23 @@ h1 button {
   margin: 0 25px;
 }
 
-/* ADD CONTAINER */
 .add-container {
+  opacity: 0;
+  z-index: -1;
   background-color: #f0f0f0;
   border-top: 2px solid #eee;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   padding: 10px 0;
-
   position: absolute;
   top: 0;
-  left: 0;
-  height: 100%;
+  bottom: 0;
   width: 100%;
-
-  /* animation */
-  opacity: 0;
-  z-index: -1;
-  transition: all 0.3s ease;
+  transition: 0.3s ease;
 }
 
-/* show class via JS */
 .add-container.show {
   opacity: 1;
   z-index: 2;
